Fix for discussion username image overlapping issue #13

--- a/client/styles.css
+++ b/client/styles.css
@@ -371,3 +371,8 @@ h4 {
      no-repeat
      right center;
 }
+
+.comments-box .img-avatar {
+    max-width: 50px;
+    max-height: 50px;
+}
